--- a/izuho_omi_Birthday_2025/illustration.html
+++ b/izuho_omi_Birthday_2025/illustration.html
@@ -17,7 +17,7 @@
                     <ul class="main-nav">
                         <li><a href="top.html">Top</a></li>
                         <li><a href="illustration.html">Illustration</a></li>
-                        <li><a href="contents.html">Message</a></li>
+                        <li><a href="contents.html">Contents</a></li>
                         <li><a href="link.html">Link</a></li>
                     </ul>
                 </nav>
