--- a/izuho_omi_Birthday_2025/link.html
+++ b/izuho_omi_Birthday_2025/link.html
@@ -37,7 +37,7 @@
                     <a href="https://www.youtube.com/@izuho_omi">YouTubeチャンネル</a>
                 </div>
             <footer class="page-footer">
-                <img src="images/footer.svg" alt="フッター">
+                <img src="images/footer2.png" alt="フッター">
             </footer>
         </div>
    </body>
