--- a/izuho_omi_Birthday_2025/top.html
+++ b/izuho_omi_Birthday_2025/top.html
@@ -36,7 +36,7 @@
                 </div>
             </main>
             <footer class="page-footer">
-                <img src="images/footer.svg" alt="フッター">
+                <img src="images/footer2.png" alt="フッター">
             </footer>
         </div>
     </body>
