--- a/izuho_omi_Birthday_2025/illustration.html
+++ b/izuho_omi_Birthday_2025/illustration.html
@@ -54,7 +54,7 @@
                 </div>
             </main>
             <footer class="page-footer">
-                <img src="images/footer2.png" alt="フッター">
+                <img src="images/footer.png" alt="フッター">
             </footer>
         </div>
     </body>
