--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -55,7 +55,7 @@
                 </div>
             </main>
             <footer class="page-footer">
-                <img src="images/footer.png" alt="フッター">
+                <img src="images/footer.svg" alt="フッター">
             </footer>
         </div>
     </body>
