--- a/izuho_omi_Birthday_2025/illustration.html
+++ b/izuho_omi_Birthday_2025/illustration.html
@@ -54,7 +54,9 @@
                 </div>
             </main>
             <footer class="page-footer">
-                <img src="images/footer.svg" alt="フッター">
+                <h1 class="align-center">
+                   <div class="footer" src="images/footer.png" alt="フッター"></div>
+                </h1> 
             </footer>
         </div>
     </body>
