--- a/izuho_omi_Birthday_2025/illustration.html
+++ b/izuho_omi_Birthday_2025/illustration.html
@@ -54,9 +54,7 @@
                 </div>
             </main>
             <footer class="page-footer">
-                <h1 class="align-center">
-                   <div class="footer" src="images/footer.png" alt="フッター"></div>
-                </h1> 
+                <img src="images/footer.png" alt="フッター">
             </footer>
         </div>
     </body>
