--- a/izuho_omi_Birthday_2025/illustration.html
+++ b/izuho_omi_Birthday_2025/illustration.html
@@ -29,20 +29,20 @@
             </section>
             <main class="wrapper grid">
                 <div class="item">
-                    <img src="images/image1.png" alt="">
-                    <p>イラスト１</p>
+                    <img src="images/image1.png" alt="めがねくろぶち">
+                    <p>めがねくろぶち</p>
                 </div>
                 <div class="item">
-                    <img src="images/image2.png" alt="">
-                    <p>イラスト2</p>
+                    <img src="images/image2.png" alt="おるがん">
+                    <p>おるがん</p>
                 </div>
                 <div class="item">
-                    <img src="images/image3.png" alt="">
-                    <p>イラスト3</p>
+                    <img src="images/image3.png" alt="トコロテンフラペチーノ">
+                    <p>トコロテンフラペチーノ</p>
                 </div>
                 <div class="item">
-                    <img src="images/image4.png" alt="">
-                    <p>イラスト4</p>
+                    <img src="images/image4.png" alt="ミカリ">
+                    <p>ミカリ</p>
                 </div>
                 <div class="item">
                     <img src="images/image5.png" alt="">
