--- a/izuho_omi_Birthday_2025/illustration.html
+++ b/izuho_omi_Birthday_2025/illustration.html
@@ -24,7 +24,7 @@
             </header>
             <section class="about">
                 <h2 class="heading-large">イラストコーナー</h2>
-                <p>おみずむ（ファンネーム）さんたちのイラストをご紹介します！
+                <p>おみずむ（ファンネーム）さんたちのイラストをご紹介します！ぜひタップして拡大して下さい
                 </p>
             </section>
             <main class="wrapper grid">
