--- a/izuho_omi_Birthday_2025/illustration.html
+++ b/izuho_omi_Birthday_2025/illustration.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/style.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.css" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js" defer type="text/javascript"></script>
     </head>
     <body>
         <div class="cover cover-home">
@@ -30,7 +33,7 @@
             </section>
             <main class="wrapper grid">
                 <div class="item">
-                    <img src="images/image1.png" alt="めがねくろぶち">
+                    <a href="images/image1.png" data-lightbox="group"><img src="images/image1.png" alt="めがねくろぶち" width="300"></a>
                     <p>めがねくろぶち</p>
                 </div>
                 <div class="item">
