--- a/izuho_omi_Birthday_2025/illustration.html
+++ b/izuho_omi_Birthday_2025/illustration.html
@@ -37,15 +37,15 @@
                     <p>めがねくろぶち</p>
                 </div>
                 <div class="item">
-                    <img src="images/image2.png" alt="おるがん">
+                    <a href="images/image2.png" data-lightbox="group"><img src="images/image2.png" alt="おるがん" width="300"></a>
                     <p>おるがん</p>
                 </div>
                 <div class="item">
-                    <img src="images/image3.png" alt="トコロテンフラペチーノ">
+                    <a href="images/image3.png" data-lightbox="group"><img src="images/image3.png" alt="トコロテンフラペチーノ" width="300"></a>
                     <p>トコロテンフラペチーノ</p>
                 </div>
                 <div class="item">
-                    <img src="images/image4.png" alt="ミカリ">
+                    <a href="images/image4.png" data-lightbox="group"><img src="images/image4.png" alt="ミカリ" width="300"></a>
                     <p>ミカリ</p>
                 </div>
                 <div class="item">
