--- a/izuho_omi_Birthday_2025/illustration.html
+++ b/izuho_omi_Birthday_2025/illustration.html
@@ -41,8 +41,8 @@
                     <p>おるがん</p>
                 </div>
                 <div class="item">
-                    <a href="images/image3.png" data-lightbox="group"><img src="images/image3.png" alt="トコロテンフラペチーノ" width="500"></a>
-                    <p>トコロテンフラペチーノ</p>
+                    <a href="images/image3.png" data-lightbox="group"><img src="images/image3.png" alt="ト コ" width="500"></a>
+                    <p>ト コ</p>
                 </div>
                 <div class="item">
                     <a href="images/image4.png" data-lightbox="group"><img src="images/image4.png" alt="ミカリ" width="500"></a>
