--- a/izuho_omi_Birthday_2025/top.html
+++ b/izuho_omi_Birthday_2025/top.html
@@ -34,6 +34,19 @@
                 <div style="text-align: center;">
                     <img src="images/omi_top.png" alt="出穂おみ">
                 </div>
+            <section class="about">
+                <h1 class="heading-large">リンク集</h1>
+                    <p>出穂おみくんのリンク集です</p>
+            </section>
+            <section class="sns">
+                <div class="sns-item">
+                    <h3 class="heading-large">X</h3>
+                    <a href="https://x.com/Izuho_omi">Xプロフィール</a>
+                </div>
+                <div class="sns-item">
+                    <h3 class="sns-item">YouTube</h3>
+                    <a href="https://www.youtube.com/@izuho_omi">YouTubeチャンネル</a>
+                </div>
             </main>
             <footer class="page-footer">
                 <img src="images/footer.png" alt="フッター">
