--- a/izuho_omi_Birthday_2025/top.html
+++ b/izuho_omi_Birthday_2025/top.html
@@ -13,7 +13,7 @@
         <div class="cover cover-home">
             <header class="page-header">
                 <h1 class="align-center">
-                   <img class="logo" src="images/logo2.png" alt="おみ誕生祭">
+                   <img class="logo" src="images/logo.png" alt="おみ誕生祭">
                 </h1> 
                 <nav>
                     <ul class="main-nav">
