--- a/izuho_omi_Birthday_2025/top.html
+++ b/izuho_omi_Birthday_2025/top.html
@@ -33,6 +33,16 @@
                 <div style="text-align: center;">
                     <img src="images/omi_top.png" alt="出穂おみ">
                 </div>
+                <section class="about">
+                    <h2 class="heading-large">Special thanks</h2>
+                    <p>企画・コーディング  ロムエッグ
+                       アドバイザー       トコロテンフラペチーノ
+                       トップ絵           ながのメモ
+                       フッター・アイコン  虎風味のおとふ
+                       イラストを投稿して下さった皆様
+                       お祝いサイト制作Discordの皆様
+                    </p>
+                </section>
             <section class="about">
                 <h1 class="heading-large">リンク集</h1>
                     <p>出穂おみくんのリンク集です</p>
