--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -27,31 +27,7 @@
                 <p>おみずむ（ファンネーム）さんたちのお祝いメッセージをご紹介します！
                 </p>
             </section>
-            <main class="wrapper grid">
-                <div class="item">
-                    <img src="images/message1.png" alt="">
-                    <p>メッセージ１</p>
-                </div>
-                <div class="item">
-                    <img src="images/message2.png" alt="">
-                    <p>メッセージ2</p>
-                </div>
-                <div class="item">
-                    <img src="images/message3.png" alt="">
-                    <p>メッセージ3</p>
-                </div>
-                <div class="item">
-                    <img src="images/message4.png" alt="">
-                    <p>メッセージ4</p>
-                </div>
-                <div class="item">
-                    <img src="images/message5.png" alt="">
-                    <p>メッセージ5</p>
-                </div>
-                <div class="item">
-                    <img src="images/message6.png" alt="">
-                    <p>メッセージ6</p>
-                </div>
+            <main>
             </main>
             <footer class="page-footer">
                 <img src="images/footer.png" alt="フッター">
