--- a/izuho_omi_Birthday_2025/top.html
+++ b/izuho_omi_Birthday_2025/top.html
@@ -35,12 +35,14 @@
                 </div>
                 <section class="about">
                     <h2 class="heading-large">Special thanks</h2>
-                    <p>企画・コーディング  ロムエッグ
-                       アドバイザー       トコロテンフラペチーノ
-                       トップ絵           ながのメモ
-                       フッター・アイコン  虎風味のおとふ
-                       イラストを投稿して下さった皆様
-                       お祝いサイト制作Discordの皆様
+                    <p>企画・コーディング  ロムエッグ<br>
+                       アドバイザー       トコロテンフラペチーノ<br>
+                       トップ絵           ながのメモ<br>
+                       フッター・アイコン  虎風味のおとふ<br>
+                       イラストを投稿して下さった皆様<br>
+                       お祝いサイト制作Discordの皆様<br>
+                       <br>
+                       本サイトはファンによって作成されたものであり、出穂おみおよびre;BON公式のものではありません
                     </p>
                 </section>
             <section class="about">
