--- a/izuho_omi_Birthday_2025/top.html
+++ b/izuho_omi_Birthday_2025/top.html
@@ -37,7 +37,8 @@
                     <h2 class="heading-large">Special thanks</h2>
                     <p>企画・コーディング  ロムエッグ<br>
                        アドバイザー       トコロテンフラペチーノ<br>
-                       トップ絵           ながのメモ<br>
+                       トップ絵           あいる
+                       タイトルロゴ       ながのメモ<br>
                        フッター・アイコン  虎風味のおとふ<br>
                        イラストを投稿して下さった皆様<br>
                        お祝いサイト制作Discordの皆様<br>
