--- a/izuho_omi_Birthday_2025/top.html
+++ b/izuho_omi_Birthday_2025/top.html
@@ -35,11 +35,11 @@
                 </div>
                 <section class="about">
                     <h2 class="heading-large">Special thanks</h2>
-                    <p>企画・コーディング  ロムエッグ<br>
-                       アドバイザー       トコロテンフラペチーノ<br>
-                       トップ絵           あいる
-                       タイトルロゴ       ながのメモ<br>
-                       フッター・アイコン  虎風味のおとふ<br>
+                    <p>企画・コーディング&nbsp;ロムエッグ<br>
+                       アドバイザー&nbsp;トコロテンフラペチーノ<br>
+                       トップ絵&nbsp;あいる
+                       タイトルロゴ&nbsp;ながのメモ<br>
+                       フッター・アイコン&nbsp;虎風味のおとふ<br>
                        イラストを投稿して下さった皆様<br>
                        お祝いサイト制作Discordの皆様<br>
                        <br>
