--- a/izuho_omi_Birthday_2025/top.html
+++ b/izuho_omi_Birthday_2025/top.html
@@ -37,7 +37,7 @@
                     <h2 class="heading-large">Special thanks</h2>
                     <p>企画・コーディング&nbsp;ロムエッグ<br>
                        アドバイザー&nbsp;トコロテンフラペチーノ<br>
-                       トップ絵&nbsp;あいる
+                       トップ絵&nbsp;あいる<br>
                        タイトルロゴ&nbsp;ながのメモ<br>
                        フッター・アイコン&nbsp;虎風味のおとふ<br>
                        イラストを投稿して下さった皆様<br>
