--- a/izuho_omi_Birthday_2025/top.html
+++ b/izuho_omi_Birthday_2025/top.html
@@ -34,16 +34,17 @@
                     <img src="images/omi_top.png" alt="出穂おみ">
                 </div>
                 <section class="about">
-                    <h2 class="heading-large">Special thanks</h2>
-                    <p>企画・コーディング&nbsp;ロムエッグ<br>
-                       アドバイザー&nbsp;トコロテンフラペチーノ<br>
-                       トップ絵&nbsp;あいる<br>
-                       タイトルロゴ&nbsp;ながのメモ<br>
-                       フッター・アイコン&nbsp;虎風味のおとふ<br>
+                    <h2 class="heading-large">Special thanks（敬称略）</h2>
+                    <p>企画・コーディング&emsp;ロムエッグ<br>
+                       アドバイザー&emsp;トコロテンフラペチーノ<br>
+                       トップ絵&emsp;あいる<br>
+                       タイトルロゴ&emsp;ながのメモ<br>
+                       フッター・アイコン&emsp;虎風味のおとふ<br>
                        イラストを投稿して下さった皆様<br>
                        お祝いサイト制作Discordの皆様<br>
                        <br>
-                       本サイトはファンによって作成されたものであり、出穂おみおよびre;BON公式のものではありません
+                       <br>
+                       ※本サイトはファンによって作成されたものであり、出穂おみおよびre;BON公式のものではありません
                     </p>
                 </section>
             <section class="about">
