--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -23,8 +23,8 @@
                 </nav>
             </header>
             <section class="about">
-                <h2 class="heading-large">メッセージコーナー</h2>
-                <p>おみずむ（ファンネーム）さんたちのお祝いメッセージをご紹介します！
+                <h2 class="heading-large">おみくんの歌動画一覧</h2>
+                <p>おみくんの歌動画の一覧をおみずむ（ファンネーム）さんたちによるの人気ランキングと共にご紹介します！
                 </p>
             </section>
             <main>
