--- a/izuho_omi_Birthday_2025/illustration.html
+++ b/izuho_omi_Birthday_2025/illustration.html
@@ -50,6 +50,7 @@
                 <div class="item">
                     <a href="images/image5.png" data-lightbox="group"><img src="images/image5.png" alt="バイザン" width="500"></a>
                     <p>バイザン</p>
+                </div>
                 <div class="item">
                     <img src="images/image6.png" alt="仮イラスト">
                     <p>イラスト6</p>
