--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -24,10 +24,13 @@
             </header>
             <section class="about">
                 <h2 class="heading-large">おみくんの歌動画一覧</h2>
-                <p>おみくんの歌動画の一覧をおみずむ（ファンネーム）さんたちによるの人気ランキングと共にご紹介します！
+                <p>おみくんの歌動画の一覧をおみずむ（ファンネーム）さんたちの人気ランキングと共にご紹介します！
                 </p>
             </section>
             <main>
+                <img src="images/icon1.png" alt="一位">
+                <p><a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A"></a>少女レイ/みきとP</p>
+                <p><a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70"></a>晩餐歌/tuki.</p>
             </main>
             <footer class="page-footer">
                 <img src="images/footer.png" alt="フッター">
