--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -29,8 +29,13 @@
             </section>
             <main>
                 <img src="images/icon1.png" alt="一位">
-                <p><a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A"></a>少女レイ/みきとP</p>
-                <p><a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70"></a>晩餐歌/tuki.</p>
+                <h3 class="sns-item">少女レイ/みきとP</h3>
+                <a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A"></a>
+                <h3 class="sns-item">晩餐歌/tuki.</h3>
+                <a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70"></a>
+                <h3 class="sns-item">ド屑/なきそ</h3>
+                <a href="https://youtube.com/shorts/RCAEsENGeGw?si=33Z5EmxG0Ud2GZuN"></a>
+            </main>
             </main>
             <footer class="page-footer">
                 <img src="images/footer.png" alt="フッター">
