--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -28,12 +28,18 @@
                 </p>
             </section>
             <main>
-                <img src="images/icon1.png" alt="一位">
-                <h3 class="sns-item">少女レイ/みきとP</h3>
-                <a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A"></a>
-                <h3 class="sns-item">晩餐歌/tuki.</h3>
-                <a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70"></a>
-                <h3 class="sns-item">ド屑/なきそ</h3>
+                <div class="sns-item">
+                   <img src="images/icon1.png" alt="一位">
+                   <h3 class="sns-item">少女レイ/みきとP</h3>
+                </div>
+                <div>
+                   <a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A"></a>
+                   <h3 class="sns-item">晩餐歌/tuki.</h3>
+                </div>
+                <div>
+                   <a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70"></a>
+                   <h3 class="sns-item">ド屑/なきそ</h3>
+                </div>
                 <a href="https://youtube.com/shorts/RCAEsENGeGw?si=33Z5EmxG0Ud2GZuN"></a>
             </main>
             </main>
