--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -28,21 +28,24 @@
                 </p>
             </section>
             <main>
-                <div class="sns-item">
-                   <img src="images/icon1.png" alt="一位">
-                   <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn"></a>
-                   <h3 class="sns-item">少女レイ/みきとP</h3>
-                </div>
-                <div>
-                   <a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A"></a>
-                   <h3 class="sns-item">晩餐歌/tuki.</h3>
-                </div>
-                <div>
-                   <a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70"></a>
-                   <h3 class="sns-item">ド屑/なきそ</h3>
-                </div>
-                <a href="https://youtube.com/shorts/RCAEsENGeGw?si=33Z5EmxG0Ud2GZuN"></a>
-            </main>
+                <section class="sns"></section>
+                   <div class="sns-item">
+                      <img src="images/icon1.png" alt="一位">
+                      <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn"></a>
+                      <h3 class="sns-item">少女レイ/みきとP</h3>
+                    </div>
+                    <div>
+                       <a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A"></a>
+                       <h3 class="sns-item">晩餐歌/tuki.</h3>
+                    </div>
+                    <div>
+                       <a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70"></a>
+                       <h3 class="sns-item">ド屑/なきそ</h3>
+                    </div>
+                    <div>
+                       <a href="https://youtube.com/shorts/RCAEsENGeGw?si=33Z5EmxG0Ud2GZuN"></a>
+                    </div>
+                </section>
             </main>
             <footer class="page-footer">
                 <img src="images/footer.png" alt="フッター">
