--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -28,8 +28,8 @@
                 </p>
             </section>
             <main>
-                <section class="sns"></section>
-                   <div class="sns-item">
+                <section class="sns">
+                    <div class="sns-item">
                       <img src="images/icon1.png" alt="一位">
                       <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn"></a>
                       <h3 class="sns-item">少女レイ/みきとP</h3>
