--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -34,15 +34,15 @@
                    <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn"></a>
                    <h3 class="sns-item">少女レイ/みきとP</h3>
                 </div>
-                <div>
+                <div class="sns-item">
                    <a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A"></a>
                    <h3 class="sns-item">晩餐歌/tuki.</h3>
                 </div>
-                <div>
+                <div class="sns-item">
                    <a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70"></a>
                    <h3 class="sns-item">ド屑/なきそ</h3>
                 </div>
-                <div>
+                <div class="sns-item">
                    <a href="https://youtube.com/shorts/RCAEsENGeGw?si=p-V-HQ_CK8_Ls3YC"></a>
                    <h3 class="sns-item">ド屑/なきそ</h3>
                 </div>
