--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -31,20 +31,16 @@
             <section class="sns">
                 <div class="sns-item">
                    <img src="images/icon1.png" alt="一位">
-                   <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn"></a>
-                   <h3 class="sns-item">少女レイ/みきとP</h3>
+                   <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn">少女レイ/みきとP</a>
                 </div>
                 <div class="sns-item">
-                   <a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A"></a>
-                   <h3 class="sns-item">晩餐歌/tuki.</h3>
+                   <a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A">晩餐歌/tuki.</a>
                 </div>
                 <div class="sns-item">
-                   <a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70"></a>
-                   <h3 class="sns-item">ド屑/なきそ</h3>
+                   <a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70">ド屑/なきそ</a>
                 </div>
                 <div class="sns-item">
-                   <a href="https://youtube.com/shorts/RCAEsENGeGw?si=p-V-HQ_CK8_Ls3YC"></a>
-                   <h3 class="sns-item">ド屑/なきそ</h3>
+                   <a href="https://youtube.com/shorts/RCAEsENGeGw?si=p-V-HQ_CK8_Ls3YC">CH4NG/Giga</a>
                 </div>
             </section>
         </main>
