--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -36,15 +36,15 @@
                 </div>
                 <div class="sns-item">
                     <img src="images/icon4.png" alt="shorts">
-                    <a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A">&emsp;晩餐歌/tuki.</a>
+                    &emsp;<a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A">晩餐歌/tuki.</a>
                 </div>
                 <div class="sns-item">
                     <img src="images/icon4.png" alt="shorts">
-                    <a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70">&emsp;ド屑/なきそ</a>
+                    &emsp;<a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70">ド屑/なきそ</a>
                 </div>
                 <div class="sns-item">
                     <img src="images/icon4.png" alt="shorts">
-                    <a href="https://youtube.com/shorts/RCAEsENGeGw?si=p-V-HQ_CK8_Ls3YC">&emsp;CH4NG/Giga</a>
+                    &emsp;<a href="https://youtube.com/shorts/RCAEsENGeGw?si=p-V-HQ_CK8_Ls3YC">CH4NG/Giga</a>
                 </div>
             </section>
         </main>
