--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -35,16 +35,16 @@
                     <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn">少女レイ/みきとP</a>
                 </div>
                 <div class="sns-item">
-                    <img src="images/icon4.png" alt="shorts">
-                    &emsp;<a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A">晩餐歌/tuki.</a>
+                    <img src="images/icon4.png" alt="shorts">&emsp;
+                    <a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A">晩餐歌/tuki.</a>
                 </div>
                 <div class="sns-item">
-                    <img src="images/icon4.png" alt="shorts">
-                    &emsp;<a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70">ド屑/なきそ</a>
+                    <img src="images/icon4.png" alt="shorts">&emsp;
+                    <a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70">ド屑/なきそ</a>
                 </div>
                 <div class="sns-item">
-                    <img src="images/icon4.png" alt="shorts">
-                    &emsp;<a href="https://youtube.com/shorts/RCAEsENGeGw?si=p-V-HQ_CK8_Ls3YC">CH4NG/Giga</a>
+                    <img src="images/icon4.png" alt="shorts">&emsp;
+                    <a href="https://youtube.com/shorts/RCAEsENGeGw?si=p-V-HQ_CK8_Ls3YC">CH4NG/Giga</a>
                 </div>
             </section>
         </main>
