--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -29,20 +29,20 @@
             </section>
         <main>
             <section class="sns">
-                <div class="sns-item">
+                <div class="sns-item2">
                     <img src="images/icon1.png" alt="一位">
                     <img src="images/icon4.png" alt="shorts">
                     <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn">少女レイ/みきとP</a>
                 </div>
-                <div class="sns-item">
+                <div class="sns-item2">
                     <img src="images/icon4.png" alt="shorts">&emsp;
                     <a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A">晩餐歌/tuki.</a>
                 </div>
-                <div class="sns-item">
+                <div class="sns-item2">
                     <img src="images/icon4.png" alt="shorts">&emsp;
                     <a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70">ド屑/なきそ</a>
                 </div>
-                <div class="sns-item">
+                <div class="sns-item2">
                     <img src="images/icon4.png" alt="shorts">&emsp;
                     <a href="https://youtube.com/shorts/RCAEsENGeGw?si=p-V-HQ_CK8_Ls3YC">CH4NG/Giga</a>
                 </div>
