--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -46,6 +46,10 @@
                     <img src="images/icon4.png" alt="shorts">&emsp;
                     <a href="https://youtube.com/shorts/RCAEsENGeGw?si=p-V-HQ_CK8_Ls3YC">CH4NG/Giga</a>
                 </div>
+                <div class="sns-item2">
+                    <img src="images/icon4.png" alt="shorts">&emsp;
+                    <a href="https://youtube.com/shorts/N4cSCvGhJ-g?si=fV6OVMFRff5ILM1D">『だきしめるまで。』/MINI</a>
+                </div>
             </section>
         </main>
         <footer class="page-footer">
