--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -50,6 +50,11 @@
                     <img src="images/icon4.png" alt="shorts">&emsp;
                     <a href="https://youtube.com/shorts/N4cSCvGhJ-g?si=fV6OVMFRff5ILM1D">『だきしめるまで。』/MINI</a>
                 </div>
+                <div class="sns-item2">
+                    <img src="images/icon5.png" alt="shorts">&emsp;
+                    <p>晩餐歌/tuki.</p>
+                    <a href="https://youtu.be/cXI1ZbLPTb0?si=3FTaC9WP6N8zfLpM">ラブレター/YOASOBI</a>
+                </div>
             </section>
         </main>
         <footer class="page-footer">
