--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -53,7 +53,8 @@
                 <div class="sns-item2">
                     <img src="images/icon5.png" alt="shorts">&emsp;
                     <p>晩餐歌/tuki.</p>
-                    <a href="https://youtu.be/cXI1ZbLPTb0?si=3FTaC9WP6N8zfLpM">ラブレター/YOASOBI</a>
+                    <a>ラブレター/YOASOBI</a>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/cXI1ZbLPTb0?si=mGddkDy-wX_5l3Ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
         </main>
