--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -51,7 +51,7 @@
                     <a href="https://youtube.com/shorts/N4cSCvGhJ-g?si=fV6OVMFRff5ILM1D">『だきしめるまで。』/MINI</a>
                 </div>
                 <div class="sns-item2">
-                    <a></a><img src="images/icon5.png" alt="shorts">&emsp;ラブレター/YOASOBI</a>
+                    <a><img src="images/icon5.png" alt="shorts">&emsp;ラブレター/YOASOBI</a>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/cXI1ZbLPTb0?si=mGddkDy-wX_5l3Ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
