--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -52,8 +52,23 @@
                 </div>
                 <div class="sns-item2">
                     <img src="images/icon5.png" alt="shorts">
-                    <a>ラブレター/YOASOBI</a>
+                    <a>&emsp;ラブレター/YOASOBI</a>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/cXI1ZbLPTb0?si=mGddkDy-wX_5l3Ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="sns-item2">
+                    <img src="images/icon5.png" alt="shorts">
+                    <a>&emsp;病名は愛だった/Neru&z'5</a>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/z55uSTzHGm8?si=8j7vgwP-rUxjH2Uo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="sns-item2">
+                    <img src="images/icon5.png" alt="shorts">
+                    <a>&emsp;劣等上等/Giga</a>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/iUIOdsyBORo?si=cOnfcgy9d5z5hYv8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="sns-item2">
+                    <img src="images/icon2.png" alt="二位">
+                    <img src="images/icon4.png" alt="shorts">
+                    <a href="https://youtube.com/shorts/byHg-tAah7I?si=el8ufTCHbOpP-roA">夕立のりぼん/みきとP</a>
                 </div>
             </section>
         </main>
