--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -70,6 +70,32 @@
                     <img src="images/icon4.png" alt="shorts">
                     <a href="https://youtube.com/shorts/byHg-tAah7I?si=el8ufTCHbOpP-roA">夕立のりぼん/みきとP</a>
                 </div>
+                <div class="sns-item2">
+                    <img src="images/icon4.png" alt="shorts">&emsp;
+                    <a href="https://youtube.com/shorts/MEY0-ApQFPs?si=SOo577_HpkhLuRTo">斜陽/ヨルシカ</a>
+                </div>
+                <div class="sns-item2">
+                    <img src="images/icon4.png" alt="shorts">&emsp;
+                    <a href="https://youtube.com/shorts/UxQUjjzhj80?si=TGXFiYuplJb0b21F">忘れてください/ヨルシカ</a>
+                </div>
+                <div class="sns-item2">
+                    <img src="images/icon4.png" alt="shorts">&emsp;
+                    <a href="https://youtube.com/shorts/kFu_URahSk0?si=-7mcnFlimK9G_ZP3">モニタリング/DECO*27</a>
+                </div>
+                <div class="sns-item2">
+                    <img src="images/icon4.png" alt="shorts">&emsp;
+                    <a href="https://youtube.com/shorts/RCAEsENGeGw?si=KXj-vue1GtugI_Wu">晩餐歌/tuki.</a>
+                </div>
+                <div class="sns-item2">
+                    <img src="images/icon5.png" alt="shorts">
+                    <a>&emsp;贖罪/傘村トータ</a>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/yvcTrGw7wy8?si=lAlPZ7DLEDe4CpO1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="sns-item2">
+                    <img src="images/icon3.png" alt="三位">
+                    <img src="images/icon5.png" alt="shorts">
+                    <a>&emsp;秘密/はるまきごはん</a>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/78AvhK0dY2Q?si=2uZvQJs3QD6tTlEy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
             </section>
         </main>
         <footer class="page-footer">
