--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -91,11 +91,9 @@
                     <a>&emsp;贖罪/傘村トータ</a>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/yvcTrGw7wy8?si=lAlPZ7DLEDe4CpO1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <div class="sns-item2">
-                    <a>
-                        <img src="images/icon3.png" alt="三位">
-                        <img src="images/icon5.png" alt="shorts">
-                        &emsp;秘密/はるまきごはん
-                    </a>
+                    <img src="images/icon3.png" alt="三位">
+                    <img src="images/icon5.png" alt="shorts">
+                    <a>秘密/はるまきごはん</a>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/78AvhK0dY2Q?si=2uZvQJs3QD6tTlEy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
