--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -58,12 +58,12 @@
                 <div class="sns-item2">
                     <img src="images/icon5.png" alt="shorts">
                     <a>&emsp;病名は愛だった/Neru&z'5</a>
-                    <iframe width="320" height="180" src="https://www.youtube.com/embed/z55uSTzHGm8?si=8j7vgwP-rUxjH2Uo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="320" height="180" justify-content=center src="https://www.youtube.com/embed/z55uSTzHGm8?si=8j7vgwP-rUxjH2Uo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <div class="sns-item2">
                     <img src="images/icon5.png" alt="shorts">
                     <a>&emsp;劣等上等/Giga</a>
-                    <iframe width="320" height="180" src="https://www.youtube.com/embed/iUIOdsyBORo?si=cOnfcgy9d5z5hYv8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="320" height="180" justify-content=center src="https://www.youtube.com/embed/iUIOdsyBORo?si=cOnfcgy9d5z5hYv8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <div class="sns-item2">
                     <img src="images/icon2.png" alt="二位">
@@ -89,12 +89,12 @@
                 <div class="sns-item2">
                     <img src="images/icon5.png" alt="shorts">
                     <a>&emsp;贖罪/傘村トータ</a>
-                    <iframe width="320" height="180" src="https://www.youtube.com/embed/yvcTrGw7wy8?si=lAlPZ7DLEDe4CpO1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="320" height="180" justify-content=center src="https://www.youtube.com/embed/yvcTrGw7wy8?si=lAlPZ7DLEDe4CpO1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <div class="sns-item2">
                     <img src="images/icon3.png" alt="三位">
                     <img src="images/icon5.png" alt="shorts">
                     <a>秘密/はるまきごはん</a>
-                    <iframe width="320" height="180" src="https://www.youtube.com/embed/78AvhK0dY2Q?si=2uZvQJs3QD6tTlEy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="320" height="180" justify-content=center src="https://www.youtube.com/embed/78AvhK0dY2Q?si=2uZvQJs3QD6tTlEy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
         </main>
