--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -29,9 +29,7 @@
             </section>
         <main>
             <section class="sns">
-                <div class="sns-item2">
-                    <img src="images/icon1.png" alt="一位">
-                    <img src="images/icon4.png" alt="shorts">
+
                     <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn">少女レイ/みきとP</a>
                 </div>
                 <div class="sns-item2">
@@ -53,7 +51,7 @@
                 <div class="sns-item2">
                     <img src="images/icon5.png" alt="shorts">
                     <a>&emsp;ラブレター/YOASOBI</a>
-                    <iframe width="320" height="180" src="https://www.youtube.com/embed/cXI1ZbLPTb0?si=mGddkDy-wX_5l3Ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="320" height="180" justify-content=center src="https://www.youtube.com/embed/cXI1ZbLPTb0?si=mGddkDy-wX_5l3Ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <div class="sns-item2">
                     <img src="images/icon5.png" alt="shorts">
@@ -90,6 +88,7 @@
                     <img src="images/icon5.png" alt="shorts">
                     <a>&emsp;贖罪/傘村トータ</a>
                     <iframe width="320" height="180" justify-content=center src="https://www.youtube.com/embed/yvcTrGw7wy8?si=lAlPZ7DLEDe4CpO1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
                 <div class="sns-item2">
                     <img src="images/icon3.png" alt="三位">
                     <img src="images/icon5.png" alt="shorts">
