--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -51,12 +51,12 @@
                 <div class="sns-item2">
                     <img src="images/icon5.png" alt="shorts">
                     <a>&emsp;ラブレター/YOASOBI</a>
-                    <iframe width="320" height="180" justify-content=center src="https://www.youtube.com/embed/cXI1ZbLPTb0?si=mGddkDy-wX_5l3Ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="320" height="180" justify-content=right src="https://www.youtube.com/embed/cXI1ZbLPTb0?si=mGddkDy-wX_5l3Ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <div class="sns-item2">
                     <img src="images/icon5.png" alt="shorts">
                     <a>&emsp;病名は愛だった/Neru&z'5</a>
-                    <iframe width="320" height="180" justify-content=center src="https://www.youtube.com/embed/z55uSTzHGm8?si=8j7vgwP-rUxjH2Uo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="320" height="180" justify-content=right src="https://www.youtube.com/embed/z55uSTzHGm8?si=8j7vgwP-rUxjH2Uo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <div class="sns-item2">
                     <img src="images/icon5.png" alt="shorts">
@@ -87,13 +87,13 @@
                 <div class="sns-item2">
                     <img src="images/icon5.png" alt="shorts">
                     <a>&emsp;贖罪/傘村トータ</a>
-                    <iframe width="320" height="180" justify-content=center src="https://www.youtube.com/embed/yvcTrGw7wy8?si=lAlPZ7DLEDe4CpO1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="320" height="180" justify-content=right src="https://www.youtube.com/embed/yvcTrGw7wy8?si=lAlPZ7DLEDe4CpO1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <div class="sns-item2">
                     <img src="images/icon3.png" alt="三位">
                     <img src="images/icon5.png" alt="shorts">
                     <a>秘密/はるまきごはん</a>
-                    <iframe width="320" height="180" justify-content=center src="https://www.youtube.com/embed/78AvhK0dY2Q?si=2uZvQJs3QD6tTlEy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="320" height="180" justify-content=right src="https://www.youtube.com/embed/78AvhK0dY2Q?si=2uZvQJs3QD6tTlEy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
         </main>
