--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -27,6 +27,7 @@
                 <p>おみくんの歌動画の一覧をおみずむ（ファンネーム）さんたちの人気ランキングと共にご紹介します！
                 </p>
             </section>
+        </div>
         <main>
             <section class="sns">
 
