--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -30,7 +30,7 @@
         </div>
         <main>
             <section class="sns">
-
+                <div>
                     <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn">少女レイ/みきとP</a>
                 </div>
                 <div class="sns-item2">
