--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -12,13 +12,14 @@
         <div class="cover cover-home">
             <header class="page-header">
                 <h1 class="align-center">
-                   <img class="logo" src="images/logo2.png" alt="おみ誕生祭">
+                   <img class="logo" src="images/logo2.svg" alt="おみ誕生祭">
                 </h1> 
                 <nav>
                     <ul class="main-nav">
                         <li><a href="top.html">Top</a></li>
                         <li><a href="illustration.html">Illustration</a></li>
                         <li><a href="contents.html">Contents</a></li>
+                        <li><a href="link.html">Link</a></li>
                     </ul>
                 </nav>
             </header>
@@ -30,9 +31,10 @@
             <main>
                 <section class="sns">
                     <div>
+                    <div class="sns-item2">
+                        <img src="images/icon4.png" alt="shorts">&emsp;
                         <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn">少女レイ/みきとP</a>
                     </div>
-                    <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
                         <a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A">晩餐歌/tuki.</a>
                     </div>
@@ -50,18 +52,18 @@
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon5.png" alt="shorts">
-                        <a>&emsp;ラブレター/YOASOBI</a>
-                        <iframe width="320" height="180" justify-content=right src="https://www.youtube.com/embed/cXI1ZbLPTb0?si=mGddkDy-wX_5l3Ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <span>&emsp;ラブレター/YOASOBI</span>
+                        <iframe width="320" height="180" src="https://www.youtube.com/embed/cXI1ZbLPTb0?si=mGddkDy-wX_5l3Ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon5.png" alt="shorts">
-                        <a>&emsp;病名は愛だった/Neru&z'5</a>
-                        <iframe width="320" height="180" justify-content=right src="https://www.youtube.com/embed/z55uSTzHGm8?si=8j7vgwP-rUxjH2Uo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <span>&emsp;病名は愛だった/Neru&amp;z'5</span>
+                        <iframe width="320" height="180" src="https://www.youtube.com/embed/z55uSTzHGm8?si=8j7vgwP-rUxjH2Uo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon5.png" alt="shorts">
-                        <a>&emsp;劣等上等/Giga</a>
-                        <iframe width="320" height="180" justify-content=center src="https://www.youtube.com/embed/iUIOdsyBORo?si=cOnfcgy9d5z5hYv8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <span>&emsp;劣等上等/Giga</span>
+                        <iframe width="320" height="180" src="https://www.youtube.com/embed/iUIOdsyBORo?si=cOnfcgy9d5z5hYv8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon2.png" alt="二位">
@@ -86,14 +88,14 @@
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon5.png" alt="shorts">
-                        <a>&emsp;贖罪/傘村トータ</a>
-                        <iframe width="320" height="180" justify-content=right src="https://www.youtube.com/embed/yvcTrGw7wy8?si=lAlPZ7DLEDe4CpO1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <span>&emsp;贖罪/傘村トータ</span>
+                        <iframe width="320" height="180" src="https://www.youtube.com/embed/yvcTrGw7wy8?si=lAlPZ7DLEDe4CpO1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon3.png" alt="三位">
                         <img src="images/icon5.png" alt="shorts">
-                        <a>秘密/はるまきごはん</a>
-                        <iframe width="320" height="180" justify-content=right src="https://www.youtube.com/embed/78AvhK0dY2Q?si=2uZvQJs3QD6tTlEy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <span>秘密/はるまきごはん</span>
+                        <iframe width="320" height="180" src="https://www.youtube.com/embed/78AvhK0dY2Q?si=2uZvQJs3QD6tTlEy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </section>
             </main>
