--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -34,6 +34,7 @@
                         <img src="images/icon4.png" alt="shorts">&emsp;
                         <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn">少女レイ/みきとP</a>
                     </div>
+                    <div>
                         <img src="images/icon4.png" alt="shorts">&emsp;
                         <a href="https://youtube.com/shorts/RCAEsENGeGw?si=HhA6iC_lYy9X0o2A">晩餐歌/tuki.</a>
                     </div>
