--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -31,12 +31,13 @@
             <main>
                 <section class="sns">
                     <div class="sns-item2">
-                        <img src="images/icon4.png" alt="shorts">&emsp;
+                        <img src="images/icon1.png" alt="一位">
+                        <img src="images/icon4.png" alt="shorts">
                         <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn">少女レイ/みきとP</a>
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
-                        <a href="https://youtube.com/shorts/RCAEsENGeGw?si=uhJ4onNhNyQ9l4Kp">晩餐歌/tuki.</a>
+                        <a href="https://youtube.com/shorts/RCAEsENGeGw?si=uhJ4onNhNyQ9l4Kp">晩餐歌/tuki</a>
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
