--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -12,14 +12,13 @@
         <div class="cover cover-home">
             <header class="page-header">
                 <h1 class="align-center">
-                   <img class="logo" src="images/logo2.svg" alt="おみ誕生祭">
+                   <img class="logo" src="images/logo2.png" alt="おみ誕生祭">
                 </h1> 
                 <nav>
                     <ul class="main-nav">
                         <li><a href="top.html">Top</a></li>
                         <li><a href="illustration.html">Illustration</a></li>
                         <li><a href="contents.html">Contents</a></li>
-                        <li><a href="link.html">Link</a></li>
                     </ul>
                 </nav>
             </header>
