--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -24,7 +24,8 @@
             </header>
             <section class="about">
                 <h2 class="heading-large">おみくんの歌動画一覧</h2>
-                <p>おみくんの歌動画の一覧をおみずむ（ファンネーム）さんたちの人気ランキングと共にご紹介します！
+                <p>おみくんの歌動画の一覧をおみずむ（ファンネーム）さんたちの人気ランキングと共にご紹介します！<br>
+                   タップするとその曲に飛ぶことができます
                 </p>
             </section>
             <main>
